--- a/views/admin/index.hbs
+++ b/views/admin/index.hbs
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
     <div class="row">
 <!-- Centered tabs -->
 <ul class="nav nav-tabs nav-justified">
@@ -8,9 +8,7 @@
   <!-- Tab panels -->
   <div class="tab-content">
     <div role="tabpanel" class="tab-pane active" id="users">
-<br>
-        <br>
-    <div class="center col-md-12 horizontaltab-form">
+    <div class="center col-md-12 horizontaltab-form well">
         <form class="form-inline">
           <div class="col-md-3">
             <label class="sr-only" for="user-name">Name</label>
