Theme update, changing files and folders added modified tabs

--- a/config/dev-css/base.less
+++ b/config/dev-css/base.less
@@ -11,7 +11,7 @@
 @import (less) "./../../bower_components/summernote/dist/summernote.css";
 @import (less) "./../../bower_components/summernote/dist/summernote-bs3.css";
 
-/* Toggle File */
+/* Toggle css */
 @import "toggle.less";
 @import (less) "side-toggle.css";
 
@@ -27,3 +27,5 @@
 @import (less) "./../../config/theme/css/fonts-theme.css";
 @import (less) "./../../config/theme/css/yeti.css";
 @import (less) "./../../config/theme/css/theme.css";
+@import (less) "./../../config/theme/css/cd-tabs.css";
+@import (less) "./../../config/theme/css/user-profile.css";
