--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -19,7 +19,7 @@
         </div>
         <div class="row">
           <ul class="details">
-            <li id="name"><span>Name</span><a>Ash Dreamer</a></li>
+            <li id="name"><span>Name</span><a>Ipsum Lorem</a></li>
             <li id="birthday"><span>Birthday</span><a>1983-10-10</a></li>
             <li id="address"><span>Address</span><a>Creative Avenue<a><a>11</a></li>
             <li id="postalcode"><span>Postalcode</span><a>9005 MH</a></li>
@@ -27,7 +27,7 @@
             <li id="country"><span>Country</span><a>Netherlands</a></li>
             <li id="email"><span>Email</span><a href="mailto:{{user.email}}" oldtitle="Get in touch">{{user.email}}</a></li>
             <li id="phone"><span>Phone</span><a>+00 230 790-1171</a></li>
-            <li id="website"><span>Website</span> <a href="http://www.simplesphere.net" oldtitle="Simplesphere">www.simplesphere.net</a></li>
+            <li id="website"><span>Website</span> <a href="http://www.plexus.frl" oldtitle="plexus">www.plexus.frl</a></li>
         </ul>
         </div>
       </div>
