--- a/views/layouts/clean.hbs
+++ b/views/layouts/clean.hbs
@@ -30,7 +30,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
+<body class="preload">
     <header class="cd-main-header">
         <a href="/" class="cd-logo"><img src="/images/cd-logo.svg" alt="Logo"></a>
     </header> <!-- .cd-main-header -->
