--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -30,7 +30,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
+<body class="preload">
     <header class="main-header">
         <nav class="navbar" role="navigation">
         <a href="/" class="logo"><img src="/images/logo.png" id="logoImg"/><span class="title">Plexus</span></a>
