--- a/views/layouts/sidebar.hbs
+++ b/views/layouts/sidebar.hbs
@@ -27,7 +27,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
+<body class="preload">
   <header class="cd-main-header">
     <a href="/" class="cd-logo"><img src="/images/logo.png" id="logoImg"/><span class="title">Plexus</span></a>
     <div class="cd-search is-hidden">
