--- a/views/user/settings.hbs
+++ b/views/user/settings.hbs
@@ -14,45 +14,26 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima doloremque optio tenetur, natus voluptatum error vel dolorem atque perspiciatis aliquam nemo id libero dicta est saepe laudantium provident tempore ipsa, accusamus similique laborum, consequatur quia, aut non maiores. Consectetur minus ipsum aliquam pariatur dolorem rerum laudantium minima perferendis in vero voluptatem suscipit cum labore nemo explicabo, itaque nobis debitis molestias officiis? Impedit corporis voluptates reiciendis deleniti, magnam, fuga eveniet! Velit ipsa quo labore molestias mollitia, quidem, alias nisi architecto dolor aliquid qui commodi tempore deleniti animi repellat delectus hic. Alias obcaecati fuga assumenda nihil aliquid sed vero, modi, voluptatem? Vitae voluptas aperiam nostrum quo harum numquam earum facilis sequi. Labore maxime laboriosam omnis delectus odit harum recusandae sint incidunt, totam iure commodi ducimus similique doloremque! Odio quaerat dolorum, alias nihil quam iure delectus repellendus modi cupiditate dolore atque quasi obcaecati quis magni excepturi vel, non nemo consequatur, mollitia rerum amet in. Nesciunt placeat magni, provident tempora possimus ut doloribus ullam!</p>
         </li>
         <li data-content="password">
-            
             <div class="row">
-                <div class="center">
-                    <h1>Change Password <span><input type="checkbox" id="ProfiletogglePass"></span></h1>
+            <div class="form-group">
+                <div id="passwordForm">
+                    <div class="col-sm-12 col-md-4 col-lg-4">
+                        <span id="8char" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> 8 Characters Long<br>
+                        <span id="ucase" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> One Uppercase Letter<br>
+                        <span id="lcase" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> One Lowercase Letter<br>
+                        <span id="num" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> One Number<br>
+                        <span id="pwmatch" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> Passwords Match<br>
+                    <br>
                     </div>
-                    <div class="passbox disabled">
-                    <div class="form-group">
-                    <p class="text-center">Use the form below to change your password. <br/>Your password cannot be the same as your username.</p>
-                    <form method="post" id="passwordForm">
-                    <div class="col-md-12">   
-                        <input type="password" class="input-sm form-control" name="password1" id="password1" placeholder="New Password" autocomplete="off">
-                            <div class="form-group">
-                                <div class="col-sm-4 col-sm-offset-2">
-                                    <span id="8char" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> 8 Characters Long<br>
-                                    <span id="ucase" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> One Uppercase Letter
-                                </div>
-                                <div class="col-sm-6">
-                                    <span id="lcase" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> One Lowercase Letter<br>
-                                    <span id="num" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> One Number
-                                </div>
-                            </div>
+                    <div class="col-sm-12 col-md-8 col-lg-8">
+                        <input type="password" class="input-sm form-control" name="password2" id="password2" placeholder="Repeat Password" autocomplete="off"><br>
+                        <input type="password" class="input-sm form-control" name="password1" id="password1" placeholder="New Password" autocomplete="off"><br>
                     </div>
-                    <div class="col-md-12"><p></p></div>
-                    <div class="col-md-12">
-                        <input type="password" class="input-sm form-control" name="password2" id="password2" placeholder="Repeat Password" autocomplete="off">
-                            <div class="form-group">
-                                <div class="col-sm-10 col-sm-offset-2">
-                                    <span id="pwmatch" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> Passwords Match
-                                </div>
-                            </div>
-                    </div>        
-                    <div class="col-md-12">
-                        <p>
-                        </p>
-                            <input type="submit" class="col-xs-12 btn btn-primary btn-load btn-lg" data-loading-text="Changing Password..." value="Change Password">
-                    </div>
-                    </form>
+                    <div class="col-sm-12 col-md-4 col-lg-2">
+                        <input type="submit" class="col-xs-12 btn btn-primary btn-load btn-sm" data-loading-text="Changing Password..." value="Change Password">
                     </div>
                 </div>
+            </div>
             </div>
         </li>
         <li data-content="mail">
