--- a/config/dev-css/base.less
+++ b/config/dev-css/base.less
@@ -16,7 +16,7 @@
 @import (less) "side-toggle.css";
 
 /* Loader File */
-@import (less) "loader.less";
+@import "loader.less";
 
 /* custom theme for components */
 @import (less) "demopages.css";
