--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -62,27 +62,46 @@
 
 
 a#forkme_banner {
-    position: absolute;
+	position: absolute;
     top: 0;
-    right: 110px;
-    width: 76px;
+    right: 10px;
+    width: 68px;
     height: 140px;
     display: block;
-    background: transparent url(../images/fork-sprite.png) -46px 0 no-repeat;
+    background: transparent url(../images/fork-sprite.png) -144px 0 no-repeat;
     text-indent: -9000px;
     z-index: 3;
+    background-size: cover;
 }
 
 a#forkme_banner:hover {
-  background-position: -276px 0px;
+  background-position: -248px 0px;
+}
+@media screen and (min-width: 767px) and (max-width: 1000px){
+		a#forkme_banner {
+	    position: absolute;
+	    top: 0;
+	    right: 2px;
+	    width: 42px;
+	    height: 85px;
+	}
+	a#forkme_banner:hover {
+	  background-position: -150px 0px;
+	}
+}
+
+@media screen and (max-width: 768px){
+		a#forkme_banner {
+	    right: 90px;
+	    width: 42px;
+	    height: 85px;
+	}
+	a#forkme_banner:hover {
+	  background-position: -150px 0px;
+	}
 }
 .container{
 	width:100wh;
-}
-
-.downloads{
-	height: 200px;
-    display: block;
 }
 .downloads a {
   display: block;
@@ -105,17 +124,9 @@ a#forkme_banner:hover {
   color: #83b7da;
   display: block;
 }
-
-.downloads a.zip {
-  float: left;
-}
-
-.downloads a.tgz {
-  float: right;
-}
-
 footer {
   	position: relative;
+  	margin-top: 30px;
   	width:100%;
   	height:100%;
   	background-color: #008CBA;
@@ -125,6 +136,7 @@ footer p{
     text-align: left;
     line-height: 30px;
     padding: 10px 10px 0px;
+    font-size: 0.8em;
 }
 footer p a,footer p a:hover{
     color: #ffffff;
