--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -154,7 +154,14 @@ footer span.octocat {
 
 
 /* Icons Page */
-
+  [class^="icon-"],
+  [class*=" icon-"] {
+ margin: -2px 2px 2px 2px;
+ height: 25px;
+ width: 25px;
+ float: left;
+ fill: currentColor;
+  }
   .small{font-size:14px;color:#a5adb4;}
   .small a{color:#a5adb4;}
   .small a:hover{color:#fb565e}
@@ -163,7 +170,6 @@ footer span.octocat {
   .glyphs input{margin:0;margin-top:5px;padding:8px;line-height:16px;font-size:16px;display:block;width:150px;height:40px;border:1px solid #d8e0e5;-webkit-border-radius:5px;border-radius:5px;background:#fff;outline:0;float:right;}
   .glyphs input:focus{border:1px solid #fbde4a;-webkit-box-shadow:inset 0 0 3px #fbde4a;box-shadow:inset 0 0 3px #fbde4a}
   .glyphs input:hover{-webkit-box-shadow:inset 0 0 3px #fbde4a;box-shadow:inset 0 0 3px #fbde4a}
-
   .tip {
     font-size: 16px;
     line-height: 25px;
